Add manifest link

--- a/app/Modules/Overview/@layout.latte
+++ b/app/Modules/Overview/@layout.latte
@@ -15,6 +15,7 @@
 		<meta property="og:description" content="Toustbot a výběr jeho oblíbených restaurací v Jičíně.">
 
 		<link rel="shortcut icon" type="image/png" href="{$baseUrl}/favicon.ico">
+		<link rel="manifest" href="{$baseUrl}/manifest.json">
 
 		{* Style assets *}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
