Added web icons, fixes

--- a/app/Modules/Overview/@layout.latte
+++ b/app/Modules/Overview/@layout.latte
@@ -14,6 +14,7 @@
 		<meta property="og:title" content="{include title|strip} - Toustbot a výběr jeho oblíbených restaurací v Jičíně">
 		<meta property="og:description" content="Toustbot a výběr jeho oblíbených restaurací v Jičíně.">
 
+		<link rel="apple-touch-icon" type="image/png" href="{$baseUrl}/images/icon-228x228.png">
 		<link rel="shortcut icon" type="image/png" href="{$baseUrl}/favicon.ico">
 		<link rel="manifest" href="{$baseUrl}/manifest.json">
 
