--- a/app/Modules/Overview/@layout.latte
+++ b/app/Modules/Overview/@layout.latte
@@ -20,6 +20,14 @@
 
 		{* Style assets *}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+		<style>
+			@media only screen and (max-width: 390px) {
+				.btn-group {
+					max-width: 100%;
+					overflow-x: auto;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		{* Flash messages printout *}
