--- a/app/Modules/Overview/@layout.latte
+++ b/app/Modules/Overview/@layout.latte
@@ -28,6 +28,18 @@
 				}
 			}
 		</style>
+
+		{* Google Analytics *}
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-104890274-7"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag() {
+				dataLayer.push(arguments);
+			}
+			
+  			gtag('js', new Date);
+  			gtag('config', 'UA-104890274-7');
+		</script>
 	</head>
 	<body>
 		{* Flash messages printout *}
